feat : payment impl

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ghibli-love-portraits</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>anime-ate</title>
+    <meta name="description" content="Generate anime portraits of your loved ones" />
+    <meta name="author" content="Small AI" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Anime-ate" />
+    <meta property="og:description" content="Generate anime portraits of your loved ones" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Additional Meta Tags for SEO -->
+    <meta name="keywords" content="ghibli style image, chatgpt ghibli art, ghibli style image generator, ghibli ai, studio ghibli style anime, ghibli art, ghibli portrait, ghibli anime, ghibli studio, studio ghibli chatgpt, ghibli ai generator free, ghibli chatgpt, studio ghibli style anime chatgpt, ghibli portraits chatgpt, chatgpt image generator, how to make ghibli art in chatgpt, dall e, miyazaki, studio ghibli style image, chatgpt ghibli, chatgpt 4, chat gpt 4o, gpt 4o, ghibli art chatgpt, ghibli style image generator openai, studio ghibli ai, ghibli portrait chatgpt, ghibli ai generator, chatgpt plus, gpt 4o image generator, chatgpt studio ghibli style, ai image generator, photo to ghibli style ai" />
+
   </head>
 
   <body>
