feat: google analytics

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <meta name="keywords" content="ghibli style image, chatgpt ghibli art, ghibli style image generator, ghibli ai, studio ghibli style anime, ghibli art, ghibli portrait, ghibli anime, ghibli studio, studio ghibli chatgpt, ghibli ai generator free, ghibli chatgpt, studio ghibli style anime chatgpt, ghibli portraits chatgpt, chatgpt image generator, how to make ghibli art in chatgpt, dall e, miyazaki, studio ghibli style image, chatgpt ghibli, chatgpt 4, chat gpt 4o, gpt 4o, ghibli art chatgpt, ghibli style image generator openai, studio ghibli ai, ghibli portrait chatgpt, ghibli ai generator, chatgpt plus, gpt 4o image generator, chatgpt studio ghibli style, ai image generator, photo to ghibli style ai" />
 
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0K9V5TTZJ4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0K9V5TTZJ4');
+</script>
 
   <body>
     <div id="root"></div>
