--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
     <meta name="author" content="Small AI" />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Anime-ate" />
+    <meta property="og:title" content="Anime-ate by Small Group" />
     <meta property="og:description" content="Generate anime portraits of your loved ones" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="preview.png" />
 
+    <!-- Open Graph Meta Tags -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Anime-ate by Small Group" />
+    <meta property="twitter:description" content="Generate anime portraits of your loved ones" />
+    <meta property="twitter:image" content="preview.png" />
+
+    card: "summary_large_image",
+    title: "Small Group",
+    description: "Engineer. Entrepreneurs. The Future",
+    images: "banner_image.png",
     <!-- Additional Meta Tags for SEO -->
     <meta name="keywords" content="ghibli style image, chatgpt ghibli art, ghibli style image generator, ghibli ai, studio ghibli style anime, ghibli art, ghibli portrait, ghibli anime, ghibli studio, studio ghibli chatgpt, ghibli ai generator free, ghibli chatgpt, studio ghibli style anime chatgpt, ghibli portraits chatgpt, chatgpt image generator, how to make ghibli art in chatgpt, dall e, miyazaki, studio ghibli style image, chatgpt ghibli, chatgpt 4, chat gpt 4o, gpt 4o, ghibli art chatgpt, ghibli style image generator openai, studio ghibli ai, ghibli portrait chatgpt, ghibli ai generator, chatgpt plus, gpt 4o image generator, chatgpt studio ghibli style, ai image generator, photo to ghibli style ai" />
 
